--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
           Faça login<br>
           E entre para o nosso time
         </h1>
+        <img
+					src="\Materiais\vintageTruckAnimated.svg"
+					class="left-login-image"
+					alt="Caminhão"
+				/>
       </div>
       <div class="login-form">
         <div class="card-login">
+          <h1>LOGIN</h1>
           <div class="textfield">
             <label for="usuario">Usuário</label>
             <input type="text" name="usuario" placeholder="Usuário" />
