--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
           Faça login<br>
           E entre para o nosso time
         </h1>
-        <img
-					src="\Materiais\vintageTruckAnimated.svg"
-					class="left-login-image"
-					alt="Caminhão"
-				/>
+        <img src="\Materiais\vintageTruckAnimated.svg" class="left-login-image" alt="Caminhão"/>
       </div>
       <div class="login-form">
         <div class="card-login">
